# Mlops

./: .gitignore  pyproject.toml  requirements.txt
.github/workflows/: python-ci.yml
API/: main.py
Streamlit/: streamlit_app.py
data/: housing_data.csv  housing_standardized.csv
src/models/: GradientBoosting.py  LinearRegression.py  RandomForest.py
src/shap_analysis/: shap_features.py
tests/: test_api.py  test_model.py
