[tool.poetry]
name = "housing califonia"
version = "0.1.0"
description = ""
authors = ["Hrouma <samiakleo20@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mlflow = "^2.19.0"
fastapi = {extras = ["standard"], version = "^0.115.6"}
streamlit = "^1.41.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
